apps/cv1-karunnyi-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cv1karunnyi-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cv1karunnyi-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: cv1karunnyi-ambulance-webapi
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /cv1karunnyi-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: cv1karunnyi-openapi-ui
          port: 80

    - matches:
        - path:
            type: Exact
            value: /cv1karunnyi-openapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: cv1karunnyi-ambulance-webapi
          port: 80
